# Renderer

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bat  refresh-project.bat
core/: CMakeLists.txt
core/src/: inputs.h  window_context.h
core/src/error/: error.h  fatal.c  fatal.h
core/src/memory/: allocation.h  arena.c  arena.h
core/src/string/: BString.c  BString.h  StringView.c  StringView.h
engine/: CMakeLists.txt
engine/src/: engine.c  engine.h  engine_commands.c  engine_commands.h
engine/src/console/: console.c  console.h  imgui_console.c  imgui_console.h  log.c  log.h
engine/src/console/command/: command_registry.c  command_registry.h  commands.c  commands.h  console_input_parser.c  console_input_parser.h
engine/src/rendering/: fps_camera.c  fps_camera.h  material.c  material.h  rendering.c  rendering.h  shader.c  shader.h  td_camera.c  td_camera.h  texture.c  texture.h
engine/src/transform/: transform.c  transform.h
game/: CMakeLists.txt
game/src/: game.c  game.h  game_commands.c  game_commands.h  game_runtime.c  game_runtime.h
host/exe/: CMakeLists.txt
host/exe/src/: main.c  reloading.c  reloading.h
host/exe/src/window/: window.c  window_input.c
host/hot/: CMakeLists.txt
host/hot/src/: module.c  module.h
host/shared/: input_info.h  interface.h
resources/shader/2D/: atlas.frag  atlas.vert  default.vert  sprite.frag  sprite.vert
resources/shader/generic/: default.frag  default.vert  filter_fog.frag  filter_fog.vert  fog.frag  fullscreen.frag  fullscreen.vert  pbr.frag  pbr.vert  skybox.frag  skybox.vert  textured.frag
